<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Preference_MainSettings">
        <Preference
                app:key="@string/Preference_MainSettings_SetAssistant"
                app:summary="Open default digital assistant setting page"
                app:title="Change default digital assistant app" />


        <DropDownPreference
                app:key="Preference_MainSettings_SelectImageSharingService"
                app:title="Select image sharing service" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Preference_ImgurSettings">
        <SwitchPreferenceCompat
                app:defaultValue="true"
                app:key="@string/Preference_ImgurSettings_EnableAnonymous"
                app:title="Use Anonymous Album" />

        <EditTextPreference
                app:key="@string/Preference_ImgurSettings_EditClientId"
                app:title="Edit Client ID" />

        <EditTextPreference
                app:key="@string/Preference_ImgurSettings_EditAccessToken"
                app:title="Edit Access Token" />

        <Preference
                app:key="@string/Preference_ImgurSettings_ShowHistory"
                app:title="Show History" />
    </PreferenceCategory>

</PreferenceScreen>
